--- a/woodTraits_explainDecay.Rmd
+++ b/woodTraits_explainDecay.Rmd
@@ -98,51 +98,9 @@ We expect initial wood traits will explain varitation in species+size decay rate
 ## *Hyp (species+size-level)* Species+size-level initial wood traits will predict variation decay rates and lagginess.
 ```{r}
 
-#merge traits and response variables into 1 df
-decayfits %>%
-  select(code, species, size, 
-         ne.r2, k, t70, 
-         w.r2, alpha, beta, w.t70) %>%
-  left_join(traits.code) %>% 
-  filter(!is.na(P)) %>%
-  filter(!is.na(waterperc)) -> decayfits.traits
+makefig__traits_explain_decayParams # output/figures/maintext/traits_explain_decayparams.pdf
+  
 
-#set up full models
-respVars <- list("k","t70","ne.r2", "alpha","beta","w.t70","w.r2")
-rhs <- "size + waterperc + density + barkthick + P + K + Ca + Mn + Fe + Zn + N + C"
-mod.full.list<-lapply(respVars, ModelFit_manyYs, rhs, curr.data=decayfits.traits) # summaryTable_fxns.R
-
-#do stepwise model selection #uncomment if data changes
-# mod.select.list<-lapply(mod.full.list, function(x) {
-#   x.updated<-update(x, . ~ ., data = model.frame(x))
-#   mod.select<-step(x.updated, direction="backward")
-#   return(mod.select)
-#   })
-# names(mod.select.list) <- respVars
-# #saveRDS(mod.select.list, file = "derived_data/modSelect.RData")
-mod.select.list <- readRDS(file = "derived_data/modSelect.RData")
-
-#summarize the best models
-prettyTab <- MakeLmSummaryTable(respvars=unlist(respVars), mod.list=mod.select.list) # summaryTable_fxns.R
-write.csv(prettyTab, "output/traitsummary_code.csv")
-
-#plot
-sum.list<-lapply(mod.select.list, summary)
-coefs.df<-PullLmCoefs(sum.list, unlist(respVars))
-fitstat.df<-PullLmFitStats(sum.list, unlist(respVars))
-fitstat.df %>%
-  gather(key = "respvar", value = "value", -c(term)) %>%
-  filter(term == "r.squared") %>%
-  select(-term) %>%
-  rename('r.squared'=value) -> r2.df
-coefs.df %>%
-  left_join(r2.df) %>%
-  filter(respvar %in% c("alpha","beta","w.t70","w.r2")) -> coefs.df
-
-ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
-  geom_tile() + geom_text(aes(label = round(est, digits = 4))) +
-  xlab("Response variable") + ylab("Wood trait") +
-  theme_classic()
 ```
 
 Variation in w.t70 and beta (shape param) were best explained by traits (high r2); whereas traits explained much less variation in alpha (scale) and w.r2.
@@ -170,45 +128,7 @@ First, we need to decide what trait data (and samples) to include in this analys
 
 Plot the small-sized stem-level measures of density and barkthick
 ```{r}
-
-# prep a dataset with pmr, stem-level and code-level density and barkthick
-traits.stem %>%
-  filter(size=="small") %>%
-  select(codeStem, code, density, barkthick) %>%
-  filter(!is.na(density) & !is.na(barkthick)) %>%
-  rename("density_stem"="density",
-         "barkthick_stem"="barkthick") -> db.stem
-traits.code %>%
-  filter(size=="small") %>%
-  select(code, density, barkthick) %>%
-  filter(!is.na(density) & !is.na(barkthick)) %>%
-  rename("density_code"="density",
-         "barkthick_code"="barkthick") -> db.code
-db.stem %>%
-  left_join(db.code) %>%
-  left_join(pmr_byStem) -> db.df
-
-# look at the within-species variation in density and barkthick
-p.denVar<-ggplot(db.df, 
-                 aes(x=reorder(code, density_code), y=density_stem)) + 
-  geom_point() + theme_bw() + coord_flip() +
-  xlab("Wood species") + ylab("Density (g/cm3)")
-p.barVar<-ggplot(db.df, 
-                 aes(x=reorder(code, barkthick_code), y=barkthick_stem)) + 
-  geom_point() + theme_bw() + coord_flip() +
-  xlab("Wood species") + ylab("Bark thickness (mm)") +
-  theme(axis.text.y = element_blank(), 
-            axis.ticks.y = element_blank(), 
-            axis.title.y = element_blank(),
-            plot.margin = unit(c(0,1,0,0), "lines"),
-            plot.background = element_blank())
-grid.newpage()
-grid.draw(cbind(ggplotGrob(p.denVar), ggplotGrob(p.barVar), size = "last"))
-
-#pdf("output/variation_densityNbarkthick.pdf", width=5, height=5)
-#grid.newpage()
-#grid.draw(cbind(ggplotGrob(p.denVar), ggplotGrob(p.barVar), size = "last"))
-#dev.off()
+makefig__variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem) # output/figures/supplementary/variation_densityNbarkthick.pdf
 
 rm(db.stem, db.code, p.denVar, p.barVar)
 
